tests/ui/ferrocene/compiler-arguments/upper_c_panic/upper_c_panic_abort.rs
//@ build-fail
//@ compile-flags: -Cpanic=abort
//@ needs-unwind
//~? ERROR not compiled with this crate's panic strategy

fn main() {}

// ferrocene-annotations: um_rustc_C_panic
